# BEJ-to-JSON-parser

./: .gitignore  CMakeLists.txt  LICENSE  README.md  decode.c  main.c
dictionaries/: annotation.map  example.json
docs/: Doxyfile.txt
docs/html/: annotated.html  annotated_dup.js  classes.html  decode_8c.html  decode_8c.js  decode_8c_source.html  decode_8h.html  decode_8h.js  decode_8h_source.html  dir_13e138d54eb8818da29c3992edef070a.html  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d44c64559bbebec7f509842c48db8b23.js  doxygen_crawl.html  files.html  files_dup.js  globals.html  globals_func.html  index.html  index.js  main_8c.html  main_8c.js  main_8c_source.html  menudata.js  navtreedata.js  navtreeindex0.js  struct_buffer_reader__t.html  struct_decode_args__t.html  struct_decoder_context__t.html  struct_dictionary__t.html  struct_dictionary_entry__t.html  struct_s_f_l_v__t.html  test_8cpp.html  test_8cpp_source.html
docs/html/search/: all_0.js  all_1.js  all_10.js  all_2.js  all_3.js  all_4.js  all_6.js  all_7.js  all_9.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  files_0.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  pages_1.js  pages_10.js  pages_3.js  pages_4.js  pages_5.js  pages_7.js  pages_9.js  pages_a.js  pages_b.js  pages_c.js  pages_d.js  pages_e.js  searchdata.js
include/: decode.h
test/: test.cpp
